# PDAL

./: CMakeLists.txt
cmake/: autoxbf.cmake  bf.cmake  options.cmake
cmake/modules/: FindAUTOXBF.cmake  FindBF.cmake
filters/: ReprojectionFilter.cpp  ReprojectionFilter.hpp
io/: EptReader.cpp  EptReader.hpp
plugins/: CMakeLists.txt
plugins/autoxbf/: CMakeLists.txt
plugins/autoxbf/io/: AutoXBFReader.cpp  AutoXBFReader.hpp  AutoXBFWriter.cpp  AutoXBFWriter.hpp
plugins/bf/: CMakeLists.txt
plugins/bf/io/: BFCommon.cpp  BFCommon.hpp  BFReader.cpp  BFReader.hpp  BFWriter.cpp
test/unit/: CMakeLists.txt
test/unit/io/: AutoXBFReaderTest.cpp
